--- a/03_CovAndCor.Rmd
+++ b/03_CovAndCor.Rmd
@@ -76,12 +76,14 @@ $$
 
 Entonces si $LB$ excede el valor crítico de la tabla $Ji$ cuadrada al nivel de significancia seleccionado, no se acepta la hipótesis de que todos los coeficientes de autocorrelación son iguales a cero, por lo tanto al menos algunos de ellos deben ser diferentes de cero[^2.1].
 
+En la sección [Autocorrelación](https://rstudio-pubs-static.s3.amazonaws.com/1071417_80a972e9e36f4e95b54e444ac18a89d3.html#autocorrelaci%C3%B3n) del blog puedes encontrar gráficas interesantes sobre este tema y aplicaciones directas en R.
+
 ## Ejercicios
-1. ¿Qué mide la auto-corelación? (Seleccione la opción correcta)
-(a) Dependencia Lineal entre multiples puntos de series de tiempo diferentes observadas a tiempos
+1. ¿Qué mide la auto-correlación? (Seleccione la opción correcta)
+(a) Dependencia Lineal entre múltiples puntos de series de tiempo diferentes observadas a tiempos
 distintos.
 (b) Dependencia lineal entre dos puntos de la misma serie observada a tiempos distintos.
-(c) Dependencia cuadráatica entre dos puntos de una misma serie observada a tiempo distintos.
+(c) Dependencia cuadrática entre dos puntos de una misma serie observada a tiempo distintos.
 (d) Dependencia lineal entre dos puntos de series distintas observadas al mismo tiempo.
 
 2. Suponga que el correlograma de una serie de tiempo con 100 observaciones tiene: $\hat\rho_1$ = 0.31, $\hat\rho_2$ = 0.07,$\hat\rho_3$ = −0.05, $\hat\rho_4$= 0.06, $\hat\rho_5$ = −0.03, $\hat\rho_6$ = 0.27, $\hat\rho_7$ = 0.08,$\hat\rho_8$= 0.05,$\hat\rho_9$ = 0.02, $\hat\rho_10$= −0.01. ¿Dada
