--- a/07_ARMA.Rmd
+++ b/07_ARMA.Rmd
@@ -167,6 +167,8 @@ Además de las gráficas de Autocorrelación simple y parcial.
   general_theme)
 ```
 
+La sección especializada a este tema en el blog es el apartado [ARMA](https://rstudio-pubs-static.s3.amazonaws.com/1071417_80a972e9e36f4e95b54e444ac18a89d3.html#armapq).
+
 ## Ejericios
 1) Los modelos ARMA(p,q) tienen componente autoregresivo y componente de medias móviles
 a. Cierto
