--- a/08_ARIMA.Rmd
+++ b/08_ARIMA.Rmd
@@ -107,6 +107,8 @@ Además de las gráficas de Autocorrelación simple y parcial.
 
 ¿Qué se puede decir del efecto que tiene el parámetro $d$ al comparar las gráficas de ambas series? 
 
+La sección especializada a este tema en el blog es el apartado [ARIMA](https://rstudio-pubs-static.s3.amazonaws.com/1071417_80a972e9e36f4e95b54e444ac18a89d3.html#arimapdq)
+
 ## Ejercicios
 1) 57 mediciones consecutivas de una máquina están en el objeto $deere3$ del paquete TSA:
 a. Grafique la serie de tiempo. ¿Qué patrón observa?, ¿Un modelo estacionario podría ser adecuado a ese gráfico?
