--- a/04_Transforms.Rmd
+++ b/04_Transforms.Rmd
@@ -1,7 +1,8 @@
 ---
 output:
-  pdf_document: default
-  html_document: default
+  html_document: 
+    includes:
+      in_header: ga.html
 ---
 # Transformaciones
 
