--- a/06_MA.Rmd
+++ b/06_MA.Rmd
@@ -1,3 +1,9 @@
+---
+output:
+  html_document: 
+    includes:
+      in_header: ga.html
+---
 # $MA(q)$: Proceso de Medias Móviles
 
 Estos modelos se puede decir son determinados por una fuente externa, además de que suponen linealidad. Es decir que el valor actual de la serie $X_t$ esta influenciado por los valores de la fuente externa.
