--- a/05_AR.Rmd
+++ b/05_AR.Rmd
@@ -1,3 +1,9 @@
+---
+output:
+  html_document: 
+    includes:
+      in_header: ga.html
+---
 # (PART) Procesos lineales estacionarios {-}
 
 # $AR(p)$: Proceso Autoregresivo
