--- a/10_LinearPredictors.Rmd
+++ b/10_LinearPredictors.Rmd
@@ -1,3 +1,9 @@
+---
+output:
+  html_document: 
+    includes:
+      in_header: ga.html
+---
 # (PART) Otras consideraciones {-}
 
 # Predictores Lineales
