--- a/preamble.tex
+++ b/preamble.tex
@@ -3,7 +3,7 @@
 %Más información de babel : http://www.texnia.com/spanishopt.html
 %es-tabla: Traduce table como tabla en lugar de como cuadro.
 %es-nodecimaldot: No añade punto tras los números de sección, subsección
-\usepackage[spanish,es-nodecimaldot,es-tabla]{babel} 
+%\usepackage[spanish,es-nodecimaldot,es-tabla]{babel} 
 \usepackage{graphicx} %Manipulación de imágenes : https://es.overleaf.com/learn/latex/Inserting_Images
 \usepackage{tikz} % Requerido para dibujar formas personalizadas
 \usepackage{float} %Gráficas
