--- a/07_ARMA.Rmd
+++ b/07_ARMA.Rmd
@@ -176,11 +176,11 @@ Además de las gráficas de Autocorrelación simple y parcial.
 La sección especializada a este tema en el blog es el apartado [ARMA](https://rstudio-pubs-static.s3.amazonaws.com/1071417_253bc2f164f4438b918aaaee3a3da291.html#armapq).
 
 ## Ejericios
-1) Los modelos ARMA(p,q) tienen componente autoregresivo y componente de medias móviles
+1) Los modelos $ARMA(p,q)$ tienen componente autoregresivo y componente de medias móviles
 a. Cierto
 b. Falso
 c. Sólo si p y q son mayores a cero
 d. Sólo si p y q son distintos de cero
 2) En un modelo definido por $X_t=0.65X_{t-1}+\epsilon_t+0.30\epsilon_{t-1}$ con $\epsilon_t\sim N(0,1)$, calcular $\rho_2$
-3) Suponga que el correlograma de una serie de tiempo con 100 observaciones tiene: $\hat\rho_1$ = 0.31, $\hat\rho_2$ = 0.07, $\hat\rho_3$ = −0.05, $\hat\rho_4$= 0.06, $\hat\rho_5$ = −0.03, $\hat\rho_6$ = 0.27, $\hat\rho_7$ = 0.08, $\hat\rho_8$= 0.05, $\hat\rho_9$ = 0.02, $\hat\rho_10$= −0.01.¿Qué modelo ARMA es
+3) Suponga que el correlograma de una serie de tiempo con 100 observaciones tiene: $\hat\rho_1$ = 0.31, $\hat\rho_2$ = 0.07, $\hat\rho_3$ = -0.05, $\hat\rho_4$= 0.06, $\hat\rho_5$ = -0.03, $\hat\rho_6$ = 0.27, $\hat\rho_7$ = 0.08, $\hat\rho_8$= 0.05, $\hat\rho_9$ = 0.02, $\hat\rho_10$= -0.01.¿Qué modelo ARMA es
 apropiado?
